--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,34 +1,23 @@
-<table class="table">
-    <thead>
-      <tr>
-        <th scope="col">id</th>
-        <th scope="col">name</th>
-        <th scope="col">price</th>
-        <th scope="col">image</th>
-        <th scope="col">desc</th>
-        <th scope="col">action</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
-        <td>
-            <button type="button" class="btn btn-warning">edit</button>
-        </td>
-        <td>
-            <button type="button" class="btn btn-danger">delete</button>
+<table class="table table-bordererd">
+  <thead>
+    <tr>
+      <th>id</th>
+      <th>name</th>
+      <th>price</th>
+      <th>status</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let product of productList; let i = index">
+      <td>{{ i + 1 }}</td>
+      <td>{{ product.name }}</td>
+      <td>{{ product.price }}</td>
 
-           
-        </td>
-      </tr>
-    
-    </tbody>
-  </table>
-  <div class="">
-    <button type="button" class="btn btn-success">ADD PRODUCT</button>
+      <td>{{ product.status ? "con hang" : "het hang" }}</td>
+      <td>
+        <button type="button" class="btn btn-info">Info</button>
+      </td>
+    </tr>
+  </tbody>
+</table>
 
-  </div>
